src/component-library/components/ScrollTransition/ScrollTransition.module.scss
@use '../../foundation/index.module' as *;
@use '../../utilities/index.module' as *;

.main-wrapper {
  background-color: var(--background);
  color: var(--text);
  transition: 1000ms linear;

  /* Transitions for component elements as they come into view */
  [data-animate] {
    transition: 1s ease-in-out;
  }

  [data-animate='xs'] {
    transform: translateY(px-to-rem(50));
  }

  [data-animate='s'] {
    transform: translateY(px-to-rem(200));
  }

  [data-animate='m'] {
    transform: translateY(px-to-rem(400));
  }

  [data-animate='l'] {
    transform: translateY(px-to-rem(600));
  }

  [data-animate-delay] {
    transition-delay: 0.3s;
  }

  [data-animate-active] {
    transform: translateY(0);
  }

  > * {
    position: relative;
    z-index: 1;
  }

  [data-content="diamond"] {
    z-index: 0;
  }
}

